# moviematcher

./: RECOMMENDATION_ALGORITHM.md  app.py  pyproject.toml
MovieMatcher/: models.py  requirements.txt
MovieMatcher/static/css/: style.css
MovieMatcher/templates/: index.html
static/js/: app.js
templates/: index.html  watchlist.html
