[project]
name = "movie-recommendation-app"
version = "1.0.0"
description = "A Flask-based movie recommendation application using TMDB API"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "email-validator>=2.1.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"